@@ -2,7 +2,7 @@
 /*
  Command.h : Fim Command class header file
 
- (c) 2007-2017 Michele Martone
+ (c) 2007-2023 Michele Martone
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -53,45 +53,6 @@ class Command FIM_FINAL
 	Command::Command(fim_cmd_id cmd, fim::string help, O*op, fim::string(O::*fp)(const args_t&))
 	       	:cmd_(cmd),help_(help),cmf_(std::bind(fp,op,std::placeholders::_1)) {}
 
-#else /* FIM_USE_CXX11 */
-	typedef fim::string fim_cmd_id; // command id
-	typedef fim::string fim_cls; // command line statement
-
-class Command FIM_FINAL
-{
-	fim_cmd_id cmd_;
-	fim::string help_;
-	public:
-	explicit Command(fim_cmd_id cmd, fim::string help, Browser *b, fim::string(Browser::*bf)(const args_t&));
-	explicit Command(fim_cmd_id cmd, fim::string help, CommandConsole *c,fim::string(CommandConsole::*cf)(const args_t&));
-#ifdef FIM_WINDOWS
-	explicit Command(fim_cmd_id cmd, fim::string help, FimWindow *w, fim::string(FimWindow::*cf)(const args_t&));
-#endif /* FIM_WINDOWS */
-
-	private:
-	union{
-		fim::string (Browser::*browserf_)(const args_t&) ;
-		fim::string (CommandConsole::*consolef_)(const args_t&) ;
-#ifdef FIM_WINDOWS
-		fim::string (FimWindow::*windowf_)(const args_t&) ;
-#endif /* FIM_WINDOWS */
-	};
-	union{
-		Browser *browser_;
-		CommandConsole *commandconsole_;
-#ifdef FIM_WINDOWS
-		FimWindow *window_;
-#endif /* FIM_WINDOWS */
-	};
-
-	public:
-	const fim_cmd_id & cmd(void)const;
-	const fim::string & getHelp(void)const;
-	fim::string execute(const args_t&args);
-	bool operator < (const Command&c)const{return cmd_< c.cmd_;}
-	bool operator <=(const Command&c)const{return cmd_<=c.cmd_;}
-	~Command(void) { }
-};
 #endif /* FIM_USE_CXX11 */
 } /* namespace fim */
 #endif /* FIM_COMMAND_H */
