@@ -2,7 +2,7 @@
 /*
  DebugConsole.h : Fim virtual console display.
 
- (c) 2008-2022 Michele Martone
+ (c) 2008-2023 Michele Martone
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -67,24 +67,6 @@ namespace fim
 		/* deleted member functions cannot be called not even by be'friend'ed clases */
 		MiniConsole& operator= (const MiniConsole&rhs) = delete;
 		MiniConsole(const MiniConsole& rhs) = delete;
-#else /* FIM_USE_CXX11 */
-		/* private member functions can be called even by be'friend'ed clases */
-		private:
-		MiniConsole& operator= (const MiniConsole&rhs){return *this;/* a nilpotent assignment */}
-		MiniConsole(const MiniConsole& rhs) :
-			Namespace(rhs),
-			buffer_(FIM_NULL),
-			line_(FIM_NULL),
-			bp_(FIM_NULL),
-			bsize_(0),
-			lsize_(0),
-			ccol_(0),
-			cline_(0),
-			lwidth_(0),
-			rows_(0),
-			scroll_(0),
-			displaydevice_(rhs.displaydevice_)
-			{/* this constructor should not be used */}
 #endif /* FIM_USE_CXX11 */
 		private:
 #if FIM_WANT_OBSOLETE
